# INFOMOVAss1Template

./: CMakeLists.txt  README.md  bootstrap_linux_mac.sh  bootstrap_windows.bat  game.cpp  game.h
template/: common.h  opencl.cpp  precomp.h  template.cpp
